# KUD

./: .gitignore  README.md  pyproject.toml  requirement.txt
README/: 2.HTML.md
README/CSS/: 3-2.CSS.md  3.CSS.md
README/Deploy/: 8-1.Deploy.md
README/GCP/: 6-2.FireWall.md  6.GCP.md  7.GCP.md
README/HTML/: 2-1.Setting.md  2-2.HTML.md
README/ORM/: 6.ORM.md  README.md
README/SQL/: 5.SQL.md
README/Setting/: 1.Setting.md
README/Sticker/: 4.Sticker.md
RestAPI/: manage.py  mysql.py
RestAPI/Calculator/: apps.py  views.py
RestAPI/RestAPI/: asgi.py  settings.py  urls.py  wsgi.py
RestAPI/orm/: models.py  serializers.py  views.py
RestAPI/orm/migrations/: 0001_initial.py  0002_remove_article_author_remove_article_email_and_more.py  0003_remove_article_image.py  0004_article_image.py
RestAPI/sql/: apps.py  views.py
RestAPI/stickerUtil/: sticker.py
firstproejct/: manage.py
firstproejct/Landing/: apps.py  views.py
firstproejct/config/: asgi.py  urls.py
firstproejct/config/settings/: settings.py
firstproejct/firstproejct/: asgi.py  settings.py  urls.py  wsgi.py
firstproejct/stickerUtil/: sticker.py
firstproejct/utils/: sticker.py
server/: env.sh  pyproject.toml  pyrightconfig.json  requirement.txt
server/server/: settings.py  urls.py
server/sticker/: admin.py  apps.py  models.py  serializers.py  views.py
server/sticker/migrations/: 0001_initial.py
server/utils/: main.py  stickerGen.py
web/: .eslintrc.js  .prettierrc.js  README.md  env.sh  package.json
web/public/: index.html
web/src/: App.js  index.css
(+8 files in other folders)
